tests/snapshots/hpack_golden_artifacts__hpack_basic_encoding_no_huffman.snap
---
source: tests/hpack_golden_artifacts.rs
expression: golden
---
{
  "description": "Basic GET request headers without Huffman",
  "headers": [
    {
      "name": ":method",
      "value": "GET"
    },
    {
      "name": ":path",
      "value": "/"
    },
    {
      "name": ":scheme",
      "value": "https"
    },
    {
      "name": ":authority",
      "value": "example.com"
    }
  ],
  "config": {
    "use_huffman": false,
    "max_table_size": 4096,
    "max_header_list_size": null
  },
  "encoded_bytes": [
    130,
    132,
    135,
    65,
    11,
    101,
    120,
    97,
    109,
    112,
    108,
    101,
    46,
    99,
    111,
    109
  ],
  "encoded_size": 16,
  "dynamic_table_state": {
    "current_size": 0,
    "entry_count": 0,
    "entries": []
  }
}
