tests/snapshots/hpack_golden_artifacts__hpack_compression_efficiency.snap
---
source: tests/hpack_golden_artifacts.rs
expression: results
---
{
  "basic_get_huffman": {
    "description": "basic_get headers with Huffman",
    "headers": [
      {
        "name": ":method",
        "value": "GET"
      },
      {
        "name": ":path",
        "value": "/"
      },
      {
        "name": ":scheme",
        "value": "https"
      },
      {
        "name": ":authority",
        "value": "example.com"
      }
    ],
    "config": {
      "use_huffman": true,
      "max_table_size": 4096,
      "max_header_list_size": null
    },
    "encoded_bytes": [
      130,
      132,
      135,
      65,
      136,
      47,
      145,
      211,
      93,
      5,
      92,
      135,
      167
    ],
    "encoded_size": 13,
    "dynamic_table_state": {
      "current_size": 0,
      "entry_count": 0,
      "entries": []
    }
  },
  "basic_get_no_huffman": {
    "description": "basic_get headers without Huffman",
    "headers": [
      {
        "name": ":method",
        "value": "GET"
      },
      {
        "name": ":path",
        "value": "/"
      },
      {
        "name": ":scheme",
        "value": "https"
      },
      {
        "name": ":authority",
        "value": "example.com"
      }
    ],
    "config": {
      "use_huffman": false,
      "max_table_size": 4096,
      "max_header_list_size": null
    },
    "encoded_bytes": [
      130,
      132,
      135,
      65,
      11,
      101,
      120,
      97,
      109,
      112,
      108,
      101,
      46,
      99,
      111,
      109
    ],
    "encoded_size": 16,
    "dynamic_table_state": {
      "current_size": 0,
      "entry_count": 0,
      "entries": []
    }
  },
  "custom_headers_huffman": {
    "description": "custom_headers headers with Huffman",
    "headers": [
      {
        "name": "user-agent",
        "value": "asupersync/1.0"
      },
      {
        "name": "accept",
        "value": "text/html,application/xhtml+xml"
      },
      {
        "name": "cache-control",
        "value": "no-cache"
      }
    ],
    "config": {
      "use_huffman": true,
      "max_table_size": 4096,
      "max_header_list_size": null
    },
    "encoded_bytes": [
      122,
      138,
      26,
      45,
      172,
      182,
      35,
      213,
      68,
      96,
      43,
      131,
      83,
      151,
      73,
      124,
      165,
      137,
      211,
      77,
      31,
      67,
      174,
      186,
      12,
      65,
      164,
      199,
      169,
      143,
      51,
      166,
      154,
      63,
      223,
      154,
      104,
      88,
      134,
      168,
      235,
      16,
      100,
      156,
      191
    ],
    "encoded_size": 45,
    "dynamic_table_state": {
      "current_size": 0,
      "entry_count": 0,
      "entries": []
    }
  },
  "custom_headers_no_huffman": {
    "description": "custom_headers headers without Huffman",
    "headers": [
      {
        "name": "user-agent",
        "value": "asupersync/1.0"
      },
      {
        "name": "accept",
        "value": "text/html,application/xhtml+xml"
      },
      {
        "name": "cache-control",
        "value": "no-cache"
      }
    ],
    "config": {
      "use_huffman": false,
      "max_table_size": 4096,
      "max_header_list_size": null
    },
    "encoded_bytes": [
      122,
      14,
      97,
      115,
      117,
      112,
      101,
      114,
      115,
      121,
      110,
      99,
      47,
      49,
      46,
      48,
      83,
      31,
      116,
      101,
      120,
      116,
      47,
      104,
      116,
      109,
      108,
      44,
      97,
      112,
      112,
      108,
      105,
      99,
      97,
      116,
      105,
      111,
      110,
      47,
      120,
      104,
      116,
      109,
      108,
      43,
      120,
      109,
      108,
      88,
      8,
      110,
      111,
      45,
      99,
      97,
      99,
      104,
      101
    ],
    "encoded_size": 59,
    "dynamic_table_state": {
      "current_size": 0,
      "entry_count": 0,
      "entries": []
    }
  },
  "large_values_huffman": {
    "description": "large_values headers with Huffman",
    "headers": [
      {
        "name": "content-type",
        "value": "application/json"
      },
      {
        "name": "authorization",
        "value": "Bearer aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
      }
    ],
    "config": {
      "use_huffman": true,
      "max_table_size": 4096,
      "max_header_list_size": null
    },
    "encoded_bytes": [
      95,
      139,
      29,
      117,
      208,
      98,
      13,
      38,
      61,
      76,
      116,
      65,
      234,
      87,
      255,
      3,
      186,
      81,
      216,
      91,
      20,
      24,
      198,
      49,
      140,
      99,
      24,
      198,
      49,
      140,
      99,
      24,
      198,
      49,
      140,
      99,
      24,
      198,
      49,
      140,
      99,
      24,
      198,
      49,
      140,
      99,
      24,
      198,
      49,
      140,
      99,
      24,
      198,
      49,
      140,
      99,
      24,
      198,
      49,
      140,
      99,
      24,
      198,
      49,
      140,
      99,
      24,
      198,
      49,
      140,
      99,
      24,
      198,
      49,
      140,
      99,
      24,
      198,
      49,
      140,
      99,
      24,
      198,
      49,
      140,
      99,
      24,
      198,
      49,
      140,
      99,
      24,
      198,
      49,
      140,
      99,
      24,
      198,
      49,
      140,
      99,
      24,
      198,
      49,
      140,
      99,
      24,
      198,
      49,
      140,
      99,
      24,
      198,
      49,
      140,
      99,
      24,
      198,
      49,
      140,
      99,
      24,
      198,
      49,
      140,
      99,
      24,
      198,
      49,
      140,
      99,
      24,
      198,
      49,
      140,
      99,
      24,
      198,
      49,
      140,
      99,
      24,
      198,
      49,
      140,
      99
    ],
    "encoded_size": 146,
    "dynamic_table_state": {
      "current_size": 0,
      "entry_count": 0,
      "entries": []
    }
  },
  "large_values_no_huffman": {
    "description": "large_values headers without Huffman",
    "headers": [
      {
        "name": "content-type",
        "value": "application/json"
      },
      {
        "name": "authorization",
        "value": "Bearer aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
      }
    ],
    "config": {
      "use_huffman": false,
      "max_table_size": 4096,
      "max_header_list_size": null
    },
    "encoded_bytes": [
      95,
      16,
      97,
      112,
      112,
      108,
      105,
      99,
      97,
      116,
      105,
      111,
      110,
      47,
      106,
      115,
      111,
      110,
      87,
      127,
      80,
      66,
      101,
      97,
      114,
      101,
      114,
      32,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97,
      97
    ],
    "encoded_size": 228,
    "dynamic_table_state": {
      "current_size": 0,
      "entry_count": 0,
      "entries": []
    }
  }
}
