tests/snapshots/hpack_golden_artifacts__hpack_large_values_encoding.snap
---
source: tests/hpack_golden_artifacts.rs
expression: golden
---
{
  "description": "Headers with large values (long authorization)",
  "headers": [
    {
      "name": "content-type",
      "value": "application/json"
    },
    {
      "name": "authorization",
      "value": "Bearer aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
    }
  ],
  "config": {
    "use_huffman": true,
    "max_table_size": 4096,
    "max_header_list_size": null
  },
  "encoded_bytes": [
    95,
    139,
    29,
    117,
    208,
    98,
    13,
    38,
    61,
    76,
    116,
    65,
    234,
    87,
    255,
    3,
    186,
    81,
    216,
    91,
    20,
    24,
    198,
    49,
    140,
    99,
    24,
    198,
    49,
    140,
    99,
    24,
    198,
    49,
    140,
    99,
    24,
    198,
    49,
    140,
    99,
    24,
    198,
    49,
    140,
    99,
    24,
    198,
    49,
    140,
    99,
    24,
    198,
    49,
    140,
    99,
    24,
    198,
    49,
    140,
    99,
    24,
    198,
    49,
    140,
    99,
    24,
    198,
    49,
    140,
    99,
    24,
    198,
    49,
    140,
    99,
    24,
    198,
    49,
    140,
    99,
    24,
    198,
    49,
    140,
    99,
    24,
    198,
    49,
    140,
    99,
    24,
    198,
    49,
    140,
    99,
    24,
    198,
    49,
    140,
    99,
    24,
    198,
    49,
    140,
    99,
    24,
    198,
    49,
    140,
    99,
    24,
    198,
    49,
    140,
    99,
    24,
    198,
    49,
    140,
    99,
    24,
    198,
    49,
    140,
    99,
    24,
    198,
    49,
    140,
    99,
    24,
    198,
    49,
    140,
    99,
    24,
    198,
    49,
    140,
    99,
    24,
    198,
    49,
    140,
    99
  ],
  "encoded_size": 146,
  "dynamic_table_state": {
    "current_size": 0,
    "entry_count": 0,
    "entries": []
  }
}
