tests/snapshots/hpack_golden_artifacts__hpack_mixed_static_dynamic.snap
---
source: tests/hpack_golden_artifacts.rs
expression: golden
---
{
  "description": "Mix of static exact, static name, and custom headers",
  "headers": [
    {
      "name": ":method",
      "value": "GET"
    },
    {
      "name": ":path",
      "value": "/api/v1/users"
    },
    {
      "name": "x-custom-header",
      "value": "custom-value"
    },
    {
      "name": "accept-encoding",
      "value": "gzip, deflate"
    }
  ],
  "config": {
    "use_huffman": true,
    "max_table_size": 4096,
    "max_header_list_size": null
  },
  "encoded_bytes": [
    130,
    68,
    138,
    96,
    117,
    153,
    142,
    225,
    98,
    212,
    22,
    196,
    127,
    64,
    139,
    242,
    177,
    45,
    66,
    79,
    74,
    211,
    148,
    114,
    22,
    207,
    137,
    37,
    168,
    73,
    233,
    91,
    184,
    232,
    180,
    191,
    144
  ],
  "encoded_size": 37,
  "dynamic_table_state": {
    "current_size": 0,
    "entry_count": 0,
    "entries": []
  }
}
